Revision history for perl distribution Convos

0.99_35 Not Released
 - Fix showing ":port" when editing a connection #340
 - Fix not leaking nick change events to all conversations

0.99_34 2017-04-24T10:04:55+0200
 - Fix "create connection"

0.99_33 2017-04-22T00:09:58+0200
 - Fix "/ison nick" handling #336
 - Fix handling saving server username/password #334
 - Fix marking joined users as online
 - Fix showing error messages from IRC commands
 - Add missing "!default" to _variables.scss #313
 - Add support for CONVOS_LOG_FILE #337
 - Add nick changing feature from connection editor

0.99_32 2017-04-17T22:30:54+0200
 - Fix annoying "unread" count increase on "notice"

0.99_31 2017-04-14T13:40:04+0200
 - Fix autocompleting nicks by "last seen"
 - Fix background colors for chat and embeds
 - Fix online/offline state in private dialog using "/ison nick"
 - Fix private dialogs used to be "in red" after reconnect
 - Fix race condition when opening websocket connection
 - Fix rendering "404 not found" on unknown paste
 - Fix unread count is not increased when a private dialog user join/parts
 - Improved autocomplete logic for nicks and emojis
 - Add experimental MOTD (message of the day) handling
 - Add "wanted_state" to Core::Connection
 - Improved rendering of highlight messages

0.99_30 2017-04-13T13:52:44+0200
 - Fix scrolling on "Join dialog" and "Help" pages #331
 - Add support for generating "recover password" link #302 #323
 - Add Convos::Plugin::Paste #328
 - Add support for sending multiline IRC messages #328
 - Using LinkEmbedder instead of Mojolicious::Plugin::LinkEmbedder
 - Will always have a default IRC server
 - Will not use unsafe secrets anymore

0.99_29 2017-03-21T23:35:17+0100
 - Fix ShareDialog plugin
 - Fix custom assets with Mojolicious::Plugin::AssetPack 1.41
 - Add production 404 and 500 pages
 - Add logging about CONVOS_HOME on startup
 - Remove "beforeConvosStart" JavaScript event
 - Bump Mojolicious version to 7.29
